<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".TipActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="#FF0CBFF6"
        android:orientation="horizontal">
        <Button
            android:id="@+id/back"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableStart="@drawable/ic_sagitta_white"
            android:padding="21.35dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="75dp"
            android:paddingTop="18dp"
            android:src="@drawable/ic_dino_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/tip1"
        android:layout_marginTop="37.316dp"
        android:layout_marginStart="18.684dp"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:textColor="#FF21ABD5"
        android:textSize="23.94sp"
        android:text="@string/tip1"
        android:lineSpacingMultiplier="1.17"
        />

    <TextView
        android:id="@+id/tip2"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="18.684dp"
        android:textColor="#FF9B9B9B"
        android:textSize="14.63dp"
        android:text="@string/tip2"
        android:lineSpacingMultiplier="1.18"/>

    <TextView
        android:id="@+id/tip3"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.7dp"
        android:layout_marginStart="18.684dp"
        android:textColor="#FF21ABD5"
        android:textSize="23.94sp"
        android:text="@string/tip3"
        android:lineSpacingMultiplier="1.17"
        />

    <TextView
        android:id="@+id/tip4"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="18.684dp"
        android:textColor="#FF9B9B9B"
        android:textSize="14.63dp"
        android:text="@string/tip4"
        android:lineSpacingMultiplier="1.18"/>

    <TextView
        android:id="@+id/tip5"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.7dp"
        android:layout_marginStart="18.684dp"
        android:textColor="#FF21ABD5"
        android:textSize="23.94sp"
        android:text="@string/tip5"
        android:lineSpacingMultiplier="1.17"
        />

    <TextView
        android:id="@+id/tip6"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginStart="18.684dp"
        android:textColor="#FF9B9B9B"
        android:textSize="14.63dp"
        android:text="@string/tip6"
        android:lineSpacingMultiplier="1.18"/>

</LinearLayout>